syntax = "proto3";

package io.products.attribute.api;

option java_outer_classname = "AttributeApi";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "kalix/annotations.proto";
import "io/products/attribute/domain/attribute_domain.proto";

service AttributeService {
    option (kalix.codegen) = {
      value_entity: {
        name: "io.products.attribute.domain.Attribute"
        entity_type: "attributes"
        state: "io.products.attribute.domain.AttributeState"
      }
    };
  
    rpc CreateAttribute(Attribute) returns (google.protobuf.Empty){
      option (google.api.http) = {
        post: "/create_attribute"
        body: "*"
      };
    }
    
    rpc GetAttribute(GetAttributeRequest) returns (Attribute){
      option (google.api.http) = {
        post: "/get_attribute"
        body: "*"
      };
    }

    rpc UpdateAttribute(Attribute) returns (google.protobuf.Empty);

    rpc DeleteAttribute(DeleteAttributeRequest) returns (google.protobuf.Empty);

}

message Attribute {
    string attributeId = 1  [(kalix.field).entity_key = true];
    string attributeName = 2;
    string attributeType = 3;
    bool isCommon = 4;
}

message GetAttributeRequest {
    string attributeId = 1 [(kalix.field).entity_key = true];
}
message DeleteAttributeRequest {
    string attributeId = 1 [(kalix.field).entity_key = true];
}
